# ibm-quantum-mcp

./: .env.example  .gitignore  CLAUDE.md  README.md  mcp.json  mcp_vqe_server_local.py  mcp_vqe_server_quantum.py  mertens-petri-net-architecture.md  mertens_handlers.py  mertens_utils.py  package.json  pyproject.toml
docs/mertens-spin-glass/: article.md  graph_structure_analysis.json  lambda_c_results.json  mathematical-formulation.md  next-steps.md
scripts/: analyze_graph_structure.py  scan_lambda_c.py  scan_lambda_c_qaoa.py  scan_lambda_c_vqe.py  sweep_phase_diagram.py
